5.0.0 -> 5.1a1:
    - rse: add OSSP uuid support to RPM Lua via functions uuid.generate() and uuid.describe()
    - rpm.org: Assorted int -> size_t corrections for string lengths.
    - rpm.org: More assorted int -> size_t uses.

=============================================================================

5.0b4 -> 5.0.0:
    - rse: final polishing of NEWS document
    - rse: align "rpm [--verbose] --version" output with the syntax used in mostly all GNU tools nowadays
    - mgh: allow --ignoresize when doing an erase
    - rse: fix database configuration for recently added indices "Nvra" and "Sourcepkgid"
    - jbj: differentiate %warn and %error (now stops) behavior (from openpkg).
    - jbj: merge %{realpath:...}. won't hurt a thing (from openpkg).
    - jbj: set macro_BUFSIZ as 16K independent of BUFSIZ (from openpkg).
    - rse: add RPM Lua function util.rsplit() for flexibly splitting strings into tokens based on regex
    - rse: add rpmlogGetCallback() function to allow one to restore the complete rpmlog() callback information
    - rse: add rpmluaGetGlobalState() function to allow foreign code to further extend the RPM Lua environment
    - rse: add RPM Lua function rpm.verbose() to be able to check CLI option --verbose
    - rse: add often required RPM Lua convenience function util.slurp()
    - rse: add PCRE to "devtool standalone" procedure
    - rse: make RPM configuration in "devtool standalone" procedure more flexible

5.0b3 -> 5.0b4:
    - jbj: fix: calculate clearsign'd text digests correctly.
    - jbj: fix: display RPMRC_NOKEY failures explicitly.
    - jbj: rip --predefine entirely, add comment re macro added both global/CLI.
    - jbj: link tpgp against rpmnsProbeSignature() instead.
    - jbj: add (hidden) --usecrypto option.
    - jbj: add a (unused) flags arg to rpmnsProbeSignature.
    - jbj: change rpmnsProbeSignature to return rpmRC (note: success is 0 now).
    - jbj: add --rpmnsdebug to see rpmnsProbeSignature() spew.